using virtual threads in ResourceManager(s), reformating